--- a/personal_portfolio/assets/css/style.css
+++ b/personal_portfolio/assets/css/style.css
@@ -229,7 +229,7 @@ a {
     text-align: center;
     letter-spacing: 2px;
     overflow: auto;
-    height: 50vh;
+    max-height: 50vh;
 }
 
 .resume-rightside-content p {
